src/objects/Hardware_Software__c.object
<CustomObject>
    <fields>
        <fullName>RMS_Training_OS_Service_Pack__c</fullName>
        <label>RMS Training OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Training_OS__c</fullName>
        <label>RMS Training OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Training_SQL_Version__c</fullName>
        <label>RMS Training SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Training_Software_Version_Patch__c</fullName>
        <label>RMS Training Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Training_Software_Version__c</fullName>
        <label>RMS Training Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.10 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.9 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.8 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.2 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                    <isActive>false</isActive>
                    <label>RMS 4.16.4 W</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_API_Version__c</fullName>
        <label>RMS Web API Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W </fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.3 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Certificate_Expiration__c</fullName>
        <label>RMS Web  Certificate Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Web_OS_Service_Pack__c</fullName>
        <label>RMS Web OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_OS_Test_Service_Pack__c</fullName>
        <label>RMS Web Test OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_OS_Training_Service_Pack__c</fullName>
        <label>RMS Web Training OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_OS__c</fullName>
        <label>RMS Web OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_SQL_Version__c</fullName>
        <label>RMS Web SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Software_Version_Patch__c</fullName>
        <label>RMS Web Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_Software_Version__c</fullName>
        <label>RMS Web Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                    <label>RMS 4.15 W</label>
                </value>
                <value>
                    <fullName>RMS 4.14.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_API_Version__c</fullName>
        <label>RMS Web Test API Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.3 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_Certificate_Expiration__c</fullName>
        <label>RMS Web Test Certificate Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_OS__c</fullName>
        <label>RMS Web Test OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_SQL_Version__c</fullName>
        <label>RMS Web Test SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_Software_Version_Patch__c</fullName>
        <label>RMS Web Test Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_Test_Software_Version__c</fullName>
        <label>RMS Web Test Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W </fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.3 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_API_Version__c</fullName>
        <label>RMS Web Training API Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.3 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_Certificate_Expiration__c</fullName>
        <label>RMS Web Training Certificate Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_OS__c</fullName>
        <label>RMS Web Training OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_SQL_Version__c</fullName>
        <label>RMS Web Training SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_Software_Version_Patch__c</fullName>
        <label>RMS Web Training Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Web_Training_Software_Version__c</fullName>
        <label>RMS Web Training Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.1 W  </fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.7 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.6 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.3 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.2 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.0 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.5 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.4 W</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.3 W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Replication__c</fullName>
        <label>SQL Replication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Information_URL_WMP__c</fullName>
        <label>Secure Information URL</label>
        <type>Url</type>
    </fields>
</CustomObject>